--- a/index.html
+++ b/index.html
@@ -141,12 +141,13 @@ Click here to select the clubs and get notifications <button onclick="window.loc
     <h3>Current Fest : Pragyan'25</h3>
     <table>
         <tr>
-            <th>Time</th>
-            <th>Date</th>
+            <th>Event Time</th>
             <th>Event Name</th>
-            <th>Link</th>
+            <th>Organizer</th>
+            <th>Venue</th>
         </tr>
-        <tr>
+
+        <!-- <tr>
             <td>10:00 AM</td>
             <td>2025-02-20</td>
             <td>Guest Lecture</td>
@@ -163,7 +164,17 @@ Click here to select the clubs and get notifications <button onclick="window.loc
             <td>2025-02-22</td>
             <td>Proshow Night</td>
             <td><a href="#">More Info</a></td>
-        </tr>
+        </tr> -->
+        <tr><td>8am-1pm</td><td>Fist of God (Onsite Round 1)</td><td>Pragyan</td><td>GJCH</td></tr>
+<tr><td>8am-1pm</td><td>Aerorush (Onsite Round 1)</td><td>Pragyan</td><td>GJCH</td></tr>
+<tr><td>8:30am-10:30am</td><td>Clique and Clues (Round 1)</td><td>Pragyan</td><td>Orion</td></tr>
+<tr><td>9am - 4pm</td><td>Swift (Onsite Round 1)</td><td>Pragyan</td><td>DOMS</td></tr>
+<tr><td>9am - 1pm</td><td>Circuitrix (Round 2)</td><td>Pragyan</td><td>Orion</td></tr>
+<tr><td>9am - 4pm</td><td>Start up Arena (Onsite Round 1)</td><td>Pragyan</td><td>DOMS</td></tr>
+<tr><td>9:30am - 5pm</td><td>Workshops</td><td>Pragyan</td><td>-</td></tr>
+<tr><td>3pm-5pm</td><td>GSOC Unveiled by TeCOS</td><td>Spider, TeCOS</td><td>GJCH</td></tr>
+<tr><td>2pm-5pm</td><td>De-cypher </td><td>Cypher</td><td>Orion</td></tr>
+<tr><td></td><td>Catapult Clash (Round 1)</td><td>Pragyan</td><td></td></tr>
     </table>
 
 
