--- a/index.html
+++ b/index.html
@@ -174,7 +174,21 @@ Click here to select the clubs and get notifications <button onclick="window.loc
 <tr><td>9:30am - 5pm</td><td>Workshops</td><td>Pragyan</td><td>-</td></tr>
 <tr><td>3pm-5pm</td><td>GSOC Unveiled by TeCOS</td><td>Spider, TeCOS</td><td>GJCH</td></tr>
 <tr><td>2pm-5pm</td><td>De-cypher </td><td>Cypher</td><td>Orion</td></tr>
-<tr><td></td><td>Catapult Clash (Round 1)</td><td>Pragyan</td><td></td></tr>
+<tr><td>9:30am-11am</td><td>Catapult Clash (Round 1)</td><td>Pragyan</td><td>NSO</td></tr>
+<tr><td>10:00 - 11:00</td><td>Echoes of Eternity (Round 1)</td><td>Pragyan</td><td>Orion</td></tr>
+<tr><td>12:30 - 13:00</td><td>FinTech-A-Thon Inauguration</td><td>Pragyan</td><td>Orion</td></tr>
+<tr><td>13:30 - 15:30</td><td>GL Dr. Velumani</td><td>Pragyan</td><td>A2 Hall</td></tr>
+<tr><td>14:00 - 18:00</td><td>Aerorush (Onsite Round 2)</td><td>Pragyan</td><td>GJCH</td></tr>
+<tr><td>14:00 - 18:00</td><td>Fist of God (Onsite Round 2)</td><td>Pragyan</td><td>Barn Informal Stage</td></tr>
+<tr><td>14:00 - 15:00</td><td>Roundem up (Round 1)</td><td>Events</td><td>Orion</td></tr>
+<tr><td>14:00 - 18:00</td><td>Friendly Feud</td><td>Events</td><td>Barn Informal Stage</td></tr>
+<tr><td>15:00 - 17:00</td><td>GSoC Session</td><td>Technical Council</td><td>GJCH Conference Hall</td></tr>
+<tr><td>15:00 - 16:00</td><td>Mystica (Round 1)</td><td>Events</td><td>Orion</td></tr>
+<tr><td>16:30 - 18:30</td><td>Alumni Panel</td><td>Alumni Panel</td><td>A2 Hall</td></tr>
+<tr><td>14:00 - 17:00</td><td>Cypher X Crypto</td><td>Technical Council</td><td>Orion</td></tr>
+<tr><td>18:45 - 19:20</td><td>Sand Art by Vivek Patil</td><td>Infotainment</td><td>Barn Hall</td></tr>
+<tr><td>19:20 - 19:40</td><td>Tron Dance</td><td>Infotainment</td><td>Barn Hall</td></tr>
+<tr><td>19:40 - 20:00</td><td>Light Art by Vivek Patil</td><td>Infotainment</td><td>Barn Hall</td></tr>
     </table>
 
 
