--- a/index.html
+++ b/index.html
@@ -20,6 +20,32 @@
         }
     </style>
 </head>
+
+    <style>
+    .table-container {
+        width: 100%;
+        overflow-x: auto;
+    }
+    
+    table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+
+    th, td {
+        padding: 8px;
+        text-align: left;
+        border: 1px solid #ddd;
+    }
+
+    @media (max-width: 600px) {
+        th, td {
+            font-size: 14px;
+            padding: 6px;
+        }
+    }
+</style>
+    
 <body>
 
     <h1>NMADA - Never Missing a Deadline Again!</h1>
