--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
     <style>
-    .table-container {
+/*     .table-container {
         width: 100%;
         overflow-x: auto;
     }
@@ -43,7 +43,56 @@
             font-size: 14px;
             padding: 6px;
         }
+    } */
+
+        /* Default table styling */
+.table-container {
+    width: 100%;
+    overflow-x: auto;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 8px;
+    text-align: left;
+    border: 1px solid #ddd;
+}
+
+/* Convert to card layout on small screens */
+@media (max-width: 600px) {
+    table, thead, tbody, th, td, tr {
+        display: block;
     }
+
+    thead {
+        display: none; /* Hide headers */
+    }
+
+    tr {
+        margin-bottom: 10px;
+        border: 1px solid #ddd;
+        background: #f9f9f9;
+        padding: 10px;
+        border-radius: 5px;
+    }
+
+    td {
+        display: flex;
+        justify-content: space-between;
+        padding: 6px;
+    }
+
+    td::before {
+        content: attr(data-label); /* Add labels from HTML */
+        font-weight: bold;
+        flex: 1;
+        text-align: left;
+    }
+}
 </style>
     
 <body>
