--- a/index.html
+++ b/index.html
@@ -111,12 +111,10 @@
             <tr>
                 <th><pre>     Event Name</pre></th>
                 <th><pre>               Organizer</pre></th>
-                <th><pre>               Date</pre></th>
-                <th><pre>     Time</pre></th>
-                <th><pre>      Deadline</pre></th>
-                <th>
-                    <pre>Reg.Link</pre>
-                </th>
+                <th><pre>        Date</pre></th>
+                <th><pre>  Time</pre></th>
+                <th><pre>  Deadline</pre></th>
+                <th><pre>Reg.Link</pre></th>
             </tr>
         </thead>
         <tbody>
