--- a/index.html
+++ b/index.html
@@ -88,21 +88,29 @@
 
     </style>
 
-
+    <style>
+    .big-button {
+        width: 200px;
+        height: 60px;
+        font-size: 20px;
+        padding: 10px 20px;
+    }
+</style>
 
 
 <body>
 
     <h1>NMADA - Never Missing a Deadline Again!</h1>
-    <h3>Get notifications when an event is added to the clubs you are interested in!</h3>
+    <h2>Get notifications when an event is added to the clubs you are interested in!</h2>
+    Click here to select the clubs and get notifications <button class="big-button "onclick="window.location.href='https://forms.gle/mf1dbMMjwromp5fM8';">Click</button>
     <pre></pre>
-    <label for="clubFilter">Filter by Club:</label>
+<!--     <label for="clubFilter">Filter by Club:</label>
     <select id="clubFilter">
         <option value="all">All Clubs</option>
         <option value="Pragyaan">Pragyaan</option>
         <option value="NITTFEST">NITTFEST</option>
         <option value="Aaveg">Aaveg</option>
-    </select>
+    </select> -->
 
 
     <table>
@@ -227,7 +235,7 @@
                 </table>
 
 
-Click here to select the clubs and get notifications <button onclick="window.location.href='https://forms.gle/mf1dbMMjwromp5fM8';">Click</button>
+
 
 <pre>
 </pre>
