--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@
 
     <style>
     .big-button {
-        width: 200px;
-        height: 60px;
-        font-size: 20px;
-        padding: 10px 20px;
+        width: 70px;
+        height: 50px;
+        font-size: 40px;
+        padding: 5px 5px;
     }
 </style>
 
 
 <body>
 
-    <h1>NMADA - Never Missing a Deadline Again!</h1>
-    <h2>Get notifications when an event is added to the clubs you are interested in!</h2>
+    <p style="font-size:50">NMADA - Never Missing a Deadline Again!</p>
+    <p style="font-size:40">Get notifications when an event is added to the clubs you are interested in!</p>
     Click here to select the clubs and get notifications <button class="big-button "onclick="window.location.href='https://forms.gle/mf1dbMMjwromp5fM8';">Click</button>
     <pre></pre>
 <!--     <label for="clubFilter">Filter by Club:</label>
