--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 
     <style>
     .big-button {
-        width: 70px;
+        width: 100px;
         height: 50px;
-        font-size: 40px;
+        font-size: 30px;
         padding: 5px 5px;
     }
 </style>
@@ -100,9 +100,9 @@
 
 <body>
 
-    <p style="font-size:50">NMADA - Never Missing a Deadline Again!</p>
-    <p style="font-size:40">Get notifications when an event is added to the clubs you are interested in!</p>
-    Click here to select the clubs and get notifications <button class="big-button "onclick="window.location.href='https://forms.gle/mf1dbMMjwromp5fM8';">Click</button>
+    <p style="font-size:100">NMADA - Never Missing a Deadline Again!</p>
+    <p style="font-size:80">Get notifications when an event is added to the clubs you are interested in!</p>
+    <p style="font-size:80">Click here to select the clubs and get notifications <button class="big-button "onclick="window.location.href='https://forms.gle/mf1dbMMjwromp5fM8';">Click</button></p>
     <pre></pre>
 <!--     <label for="clubFilter">Filter by Club:</label>
     <select id="clubFilter">
