--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 
 <body>
 
-    <p style="font-size:100">NMADA - Never Missing a Deadline Again!</p>
-    <p style="font-size:80">Get notifications when an event is added to the clubs you are interested in!</p>
-    <p style="font-size:80">Click here to select the clubs and get notifications <button class="big-button "onclick="window.location.href='https://forms.gle/mf1dbMMjwromp5fM8';">Click</button></p>
+    <p style="font-size: 100px">NMADA - Never Missing a Deadline Again!</p>
+    <p style="font-size: 80px">Get notifications when an event is added to the clubs you are interested in!</p>
+    <p style="font-size: 80px">Click here to select the clubs and get notifications <button class="big-button "onclick="window.location.href='https://forms.gle/mf1dbMMjwromp5fM8';">Click</button></p>
     <pre></pre>
 <!--     <label for="clubFilter">Filter by Club:</label>
     <select id="clubFilter">
