--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             text-align: left;
         }
         th {
-            font-size: 18px
+            font-size: 18px;
             background-color: #f2f2f2;
         }
     </style>
