--- a/index.html
+++ b/index.html
@@ -126,110 +126,82 @@
         </thead>
         <tbody>
             <table>
-                    <tr>
-                        <td>Break the Chain</td>
-                        <td>CryptoNITT</td>
-                        <td>22-02-25</td>
-                        <td>2pm-5pm</td>
-                        <td>22-02-25</td>
-                        <td><a href="https://docs.google.com/forms/d/e/1FAIpQLSeUYhMviHFQeElOLo8IHUvLmsCbJ9ujhwRw_TkTe-p6NItsIw/viewform">Register</a></td>
-                    </tr>
-                    <tr>
-                        <td>Hardware Heist</td>
-                        <td>Nuts and Volts</td>
-                        <td>22-02-25</td>
-                        <td>2pm-5pm</td>
-                        <td>22-02-25</td>
-                        <td><a href="https://docs.google.com/forms/d/e/1FAIpQLSfqUuqp2AnPaqoPfWnwPc4dgHUsCmDy3vMFmoay7v_rLeTVEA/viewform">Register</a></td>
-                    </tr>
-                    <tr>
-                        <td>Latent Query</td>
-                        <td>Technical Council, Pragyan</td>
-                        <td>23-02-25</td>
-                        <td>10am</td>
-                        <td>23-02-25</td>
-                        <td><a href="https://unstop.com/competitions/latent-query-pragyan25-national-institute-of-technology-nit-tiruchirappalli-1407043?lb=MFD36Tas&utm_medium=Share&utm_source=shortUrl">Register</a></td>
-                    </tr>
-                    <tr>
-                        <td>Sangam and Ingenium</td>
-                        <td>ESI</td>
-                        <td>22-02-25</td>
-                        <td>09:00 - 17:00</td>
-                        <td>N/A</td>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <td>Special Exhibits</td>
-                        <td>ESI</td>
-                        <td>22-02-25</td>
-                        <td>09:30 - 17:00</td>
-                        <td>N/A</td>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <td>Pragyan Cube Open</td>
-                        <td>Events</td>
-                        <td>22-02-25</td>
-                        <td>07:30 - 19:00</td>
-                        <td>N/A</td>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <td>Old Town Road (Round 1)</td>
-                        <td>Events</td>
-                        <td>22-02-25</td>
-                        <td>07:30 - 19:00</td>
-                        <td>N/A</td>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <td>MongoDB</td>
-                        <td>Workshops</td>
-                        <td>22-02-25</td>
-                        <td>09:30 - 17:00</td>
-                        <td>N/A</td>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <td>Siemens</td>
-                        <td>Workshops</td>
-                        <td>22-02-25</td>
-                        <td>09:30 - 17:00</td>
-                        <td>N/A</td>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <td> GL Jessica Perdius</td>
-                        <td>Guest Lecture</td>
-                        <td>22-02-25</td>
-                        <td>10:30 - 12:30</td>
-                        <td>N/A</td>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <td>Hand Shadow Art by Rekha Vyas</td>
-                        <td>Infotainment</td>
-                        <td>22-02-25</td>
-                        <td>18:45 - 19:30</td>
-                        <td>N/A</td>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <td>Magic Show by Poshak Dua</td>
-                        <td>Infotainment</td>
-                        <td>22-02-25</td>
-                        <td>19:30 - 20:30</td>
-                        <td>N/A</td>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <td>Ventriloquism by Satyajit</td>
-                        <td>Infotainment</td>
-                        <td>22-02-25</td>
-                        <td>20:30 - 21:30</td>
-                        <td>N/A</td>
-                        <td>N/A</td>
-                    </tr>
+        <td>Break the Chain</td>
+        <td>CryptoNITT</td>
+        <td>22-02-25</td>
+        <td>2pm - 5pm</td>
+        <td><a href="https://docs.google.com/forms/d/e/1FAIpQLSeUYhMviHFQeElOLo8IHUvLmsCbJ9ujhwRw_TkTe-p6NItsIw/viewform">Register</a></td>
+    </tr>
+    <tr>
+        <td>Hardware Heist</td>
+        <td>Nuts and Volts</td>
+        <td>22-02-25</td>
+        <td>2pm - 5pm</td>
+        <td><a href="https://docs.google.com/forms/d/e/1FAIpQLSfqUuqp2AnPaqoPfWnwPc4dgHUsCmDy3vMFmoay7v_rLeTVEA/viewform">Register</a></td>
+    </tr>
+    <tr>
+        <td>Latent Query</td>
+        <td>Technical Council, Pragyan</td>
+        <td>23-02-25</td>
+        <td>10am</td>
+        <td><a href="https://unstop.com/competitions/latent-query-pragyan25-national-institute-of-technology-nit-tiruchirappalli-1407043?lb=MFD36Tas&utm_medium=Share&utm_source=shortUrl">More Info</a></td>
+    </tr>
+    <tr>
+        <td>GL Srinivas Mohan</td>
+        <td>Pragyan</td>
+        <td>23-02-25</td>
+        <td>10:30 - 12:30</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>Friendly Feud</td>
+        <td>Pragyan</td>
+        <td>23-02-25</td>
+        <td>14:00 - 18:00</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>Puzzle Champ (Finals)</td>
+        <td>Pragyan</td>
+        <td>23-02-25</td>
+        <td>14:00 - 17:00</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>Aviatium (ROUND 1)</td>
+        <td>Pragyan</td>
+        <td>23-02-25</td>
+        <td>14:00 - 16:00</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>Crossfire</td>
+        <td>Pragyan</td>
+        <td>23-02-25</td>
+        <td>15:30 - 18:00</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>Aviatium (ROUND 2)</td>
+        <td>Pragyan</td>
+        <td>23-02-25</td>
+        <td>16:00 - 18:00</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>Mysore Xpress</td>
+        <td>Pragyan</td>
+        <td>23-02-25</td>
+        <td>19:30 - 21:00</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>Antara Mitra</td>
+        <td>Pragyan</td>
+        <td>23-02-25</td>
+        <td>21:30 - 00:00</td>
+        <td>-</td>
+    </tr>
                 </tbody>
             </table>
                 </table>
@@ -250,34 +222,107 @@
             <th>Venue</th>
         </tr>
 
-        <!-- <tr>
-            <td>10:00 AM</td>
-            <td>2025-02-20</td>
-            <td>Guest Lecture</td>
-            <td><a href="#">Join</a></td>
-        </tr>
-        <tr>
-            <td>02:00 PM</td>
-            <td>2025-02-21</td>
-            <td>Workshop on AI</td>
-            <td><a href="#">Register</a></td>
-        </tr>
-        <tr>
-            <td>06:30 PM</td>
-            <td>2025-02-22</td>
-            <td>Proshow Night</td>
-            <td><a href="#">More Info</a></td>
-        </tr> -->
-        <tr><td>8am-1pm</td><td>Fist of God (Onsite Round 1)</td><td>Pragyan</td><td>GJCH</td></tr>
-<tr><td>8am-1pm</td><td>Aerorush (Onsite Round 1)</td><td>Pragyan</td><td>GJCH</td></tr>
-<tr><td>8:30am-10:30am</td><td>Clique and Clues (Round 1)</td><td>Pragyan</td><td>Orion</td></tr>
-<tr><td>9am - 4pm</td><td>Swift (Onsite Round 1)</td><td>Pragyan</td><td>DOMS</td></tr>
-<tr><td>9am - 1pm</td><td>Circuitrix (Round 2)</td><td>Pragyan</td><td>Orion</td></tr>
-<tr><td>9am - 4pm</td><td>Start up Arena (Onsite Round 1)</td><td>Pragyan</td><td>DOMS</td></tr>
-<tr><td>9:30am - 5pm</td><td>Workshops</td><td>Pragyan</td><td>-</td></tr>
-<tr><td>3pm-5pm</td><td>GSOC Unveiled by TeCOS</td><td>Spider, TeCOS</td><td>GJCH</td></tr>
-<tr><td>2pm-5pm</td><td>De-cypher </td><td>Cypher</td><td>Orion</td></tr>
-<tr><td></td><td>Catapult Clash (Round 1)</td><td>Pragyan</td><td></td></tr>
+        <td>09:00 - 17:00</td>
+        <td>Sangam and Ingenium (Final Round)</td>
+        <td>Pragyan</td>
+        <td>GJCH</td>
+    </tr>
+    <tr>
+        <td>09:30 - 17:00</td>
+        <td>Special Exhibits</td>
+        <td>Pragyan</td>
+        <td>GJCH</td>
+    </tr>
+    <tr>
+        <td>07:30 - 19:00</td>
+        <td>Pragyan Cube Open</td>
+        <td>Pragyan</td>
+        <td>LOGOS</td>
+    </tr>
+    <tr>
+        <td>07:30 - 19:00</td>
+        <td>Old Town Road (Round 1)</td>
+        <td>Pragyan</td>
+        <td>CEESAT</td>
+    </tr>
+    <tr>
+        <td>07:30 - 19:00</td>
+        <td>Mystica (Round 2)</td>
+        <td>Pragyan</td>
+        <td>ORION</td>
+    </tr>
+    <tr>
+        <td>08:00 - 13:00</td>
+        <td>Submerge (Onsite Round 1)</td>
+        <td>Pragyan</td>
+        <td>SWIMMING POOL</td>
+    </tr>
+    <tr>
+        <td>08:00 - 13:00</td>
+        <td>Roboblend (Onsite Round 1)</td>
+        <td>Pragyan</td>
+        <td>GJCH</td>
+    </tr>
+    <tr>
+        <td>09:00 - 13:00</td>
+        <td>Marketing Hub (Onsite Round 1)</td>
+        <td>Pragyan</td>
+        <td>DOMS</td>
+    </tr>
+    <tr>
+        <td>09:30 - 11:30</td>
+        <td>Clique and Clues (Round 2)</td>
+        <td>Pragyan</td>
+        <td>ORION</td>
+    </tr>
+    <tr>
+        <td>09:30 - 14:00</td>
+        <td>Ultimate Manager (Onsite Round 1)</td>
+        <td>Pragyan</td>
+        <td>DOMS</td>
+    </tr>
+    <tr>
+        <td>09:00 - 14:00</td>
+        <td>Circuitrix (Round 2)</td>
+        <td>Pragyan</td>
+        <td>ECE LAB</td>
+    </tr>
+    <tr>
+        <td>09:30 - 17:00</td>
+        <td>MongoDB</td>
+        <td>Pragyan</td>
+        <td>LOGOS</td>
+    </tr>
+    <tr>
+        <td>09:30 - 17:00</td>
+        <td>Autodesk</td>
+        <td>Pragyan</td>
+        <td>THIRD-I</td>
+    </tr>
+    <tr>
+        <td>09:30 - 17:00</td>
+        <td>Siemens</td>
+        <td>Pragyan</td>
+        <td>LOGOS</td>
+    </tr>
+    <tr>
+        <td>09:30 - 17:00</td>
+        <td>Juniper Networks</td>
+        <td>Pragyan</td>
+        <td>LOGOS</td>
+    </tr>
+    <tr>
+        <td>09:30 - 12:30</td>
+        <td>Linux Foundation</td>
+        <td>Pragyan</td>
+        <td>LOGOS</td>
+    </tr>
+    <tr>
+        <td>09:30 - 17:30</td>
+        <td>Remarkskill</td>
+        <td>Pragyan</td>
+        <td>ORION</td>
+    </tr>
     </table>
 
 
