--- a/index.html
+++ b/index.html
@@ -126,10 +126,12 @@
         </thead>
         <tbody>
             <table>
+        <tr>
         <td>Break the Chain</td>
         <td>CryptoNITT</td>
         <td>22-02-25</td>
         <td>2pm - 5pm</td>
+        <td>22-02-25</td>
         <td><a href="https://docs.google.com/forms/d/e/1FAIpQLSeUYhMviHFQeElOLo8IHUvLmsCbJ9ujhwRw_TkTe-p6NItsIw/viewform">Register</a></td>
     </tr>
     <tr>
@@ -137,6 +139,7 @@
         <td>Nuts and Volts</td>
         <td>22-02-25</td>
         <td>2pm - 5pm</td>
+        <td>22-02-25</td>
         <td><a href="https://docs.google.com/forms/d/e/1FAIpQLSfqUuqp2AnPaqoPfWnwPc4dgHUsCmDy3vMFmoay7v_rLeTVEA/viewform">Register</a></td>
     </tr>
     <tr>
@@ -144,13 +147,15 @@
         <td>Technical Council, Pragyan</td>
         <td>23-02-25</td>
         <td>10am</td>
-        <td><a href="https://unstop.com/competitions/latent-query-pragyan25-national-institute-of-technology-nit-tiruchirappalli-1407043?lb=MFD36Tas&utm_medium=Share&utm_source=shortUrl">More Info</a></td>
+        <td>23-02-25</td>
+        <td><a href="https://unstop.com/competitions/latent-query-pragyan25-national-institute-of-technology-nit-tiruchirappalli-1407043?lb=MFD36Tas&utm_medium=Share&utm_source=shortUrl">Register</a></td>
     </tr>
     <tr>
         <td>GL Srinivas Mohan</td>
         <td>Pragyan</td>
         <td>23-02-25</td>
         <td>10:30 - 12:30</td>
+        <td>-</td>
         <td>-</td>
     </tr>
     <tr>
@@ -159,12 +164,14 @@
         <td>23-02-25</td>
         <td>14:00 - 18:00</td>
         <td>-</td>
+        <td>-</td>
     </tr>
     <tr>
         <td>Puzzle Champ (Finals)</td>
         <td>Pragyan</td>
         <td>23-02-25</td>
         <td>14:00 - 17:00</td>
+        <td>-</td>
         <td>-</td>
     </tr>
     <tr>
@@ -173,12 +180,14 @@
         <td>23-02-25</td>
         <td>14:00 - 16:00</td>
         <td>-</td>
+        <td>-</td>
     </tr>
     <tr>
         <td>Crossfire</td>
         <td>Pragyan</td>
         <td>23-02-25</td>
         <td>15:30 - 18:00</td>
+        <td>-</td>
         <td>-</td>
     </tr>
     <tr>
@@ -187,6 +196,7 @@
         <td>23-02-25</td>
         <td>16:00 - 18:00</td>
         <td>-</td>
+        <td>-</td>
     </tr>
     <tr>
         <td>Mysore Xpress</td>
@@ -194,12 +204,14 @@
         <td>23-02-25</td>
         <td>19:30 - 21:00</td>
         <td>-</td>
+        <td>-</td>
     </tr>
     <tr>
         <td>Antara Mitra</td>
         <td>Pragyan</td>
         <td>23-02-25</td>
         <td>21:30 - 00:00</td>
+        <td>-</td>
         <td>-</td>
     </tr>
                 </tbody>
