--- a/index.html
+++ b/index.html
@@ -89,11 +89,30 @@
     </style>
 
     <style>
-    .big-button {
-        width: 150px;
-        height: 70px;
-        font-size: 50px;
-        padding: 5px 5px;
+        .title {
+            font-size: 48px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+        .subtitle {
+            font-size: 28px;
+            margin-bottom: 20px;
+        }
+        .big-button {
+            width: 180px;
+            height: 60px;
+            font-size: 24px;
+            font-weight: bold;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+        .big-button:hover {
+            background-color: #0056b3;
+        }
     }
 </style>
 
