--- a/index.html
+++ b/index.html
@@ -119,9 +119,10 @@
 
 <body>
 
-    <p style="font-size: 60px">NMADA - Never Missing a Deadline Again!</p>
-    <p style="font-size: 40px">Get notifications when an event is added to the clubs you are interested in!</p>
-    <p style="font-size: 40px">Click here to select the clubs and get notifications <button class="big-button "onclick="window.location.href='https://forms.gle/mf1dbMMjwromp5fM8';">Click</button></p>
+    <p class="title">NMADA - Never Missing a Deadline Again!</p>
+    <p class="subtitle">Get notifications when an event is added to the clubs you are interested in!</p>
+    <p class="subtitle">Click here to select the clubs and get notifications 
+        <button class="big-button "onclick="window.location.href='https://forms.gle/mf1dbMMjwromp5fM8';">Click</button></p>
     <pre></pre>
 <!--     <label for="clubFilter">Filter by Club:</label>
     <select id="clubFilter">
