--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>NMADA</title>
+    <title>NMIA</title>
     <style>
         body {
             font-family: sans-serif;
@@ -119,9 +119,18 @@
 
 <body>
 
-    <p class="title">NMADA - Never Missing a Deadline Again!</p>
-    <p class="subtitle">Get notifications when an event is added to the clubs you are interested in!</p>
-    <p class="subtitle">Click here to select the clubs and get notifications 
+    <p class="title">NMIA - Not Missing It Again!</p>
+    <p class="subtitle">
+        Tired of missing out on events, registration deadlines, etc by your favourite clubs just cuz you didn't get the memo?
+        Exhausted from keeping track dates, deadlines, etc by checking instagram stories, posts of multiple ig accounts? 
+        Well, not anymore, NMIA’s got you covered.
+
+🔹 Pick the clubs you’re interested in, and get notifications straight to your email inbox.
+🔹 Reminders from time to time regarding the deadline, event dates.
+🔹 Check out all upcoming events in a simple, regularly updated table.
+🔹 Happening Now – See ongoing events in real time, and opt in to get a heads-up an hour before they start.
+
+It’s completely free. Just hit the button below to sign up!</p>
         <button class="big-button "onclick="window.location.href='https://forms.gle/mf1dbMMjwromp5fM8';">Click</button></p>
     <pre></pre>
 <!--     <label for="clubFilter">Filter by Club:</label>
