--- a/index.html
+++ b/index.html
@@ -95,13 +95,19 @@
             margin-bottom: 20px;
         }
         .subtitle {
-            font-size: 28px;
+            font-size: 18px;
+            line-height: 1.6;
             margin-bottom: 20px;
+            color: #555;
+            text-align: left;
+            max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
         }
         .big-button {
-            width: 180px;
-            height: 60px;
-            font-size: 24px;
+            width: 200px;
+            height: 50px;
+            font-size: 20px;
             font-weight: bold;
             background-color: #007BFF;
             color: white;
@@ -109,6 +115,8 @@
             border-radius: 10px;
             cursor: pointer;
             transition: 0.3s;
+            display: block;
+            margin: 20px auto;
         }
         .big-button:hover {
             background-color: #0056b3;
@@ -119,7 +127,7 @@
 
 <body>
 
-    <p class="title">NMIA - Not Missing It Again!</p>
+    <p class="title">NMIA - Never Miss It Again!</p>
     <p class="subtitle">
         Tired of missing out on events, registration deadlines, etc by your favourite clubs just cuz you didn't get the memo?
         Exhausted from keeping track dates, deadlines, etc by checking instagram stories, posts of multiple ig accounts? 
