--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 
     <p class="title">NMIA - Never Miss It Again!</p>
     <p class="subtitle">
+        <pre>
         Tired of missing out on events, registration deadlines, etc by your favourite clubs just cuz you didn't get the memo?
         Exhausted from keeping track dates, deadlines, etc by checking instagram stories, posts of multiple ig accounts? 
         Well, not anymore, NMIA’s got you covered.
@@ -137,6 +138,7 @@
 🔹 Reminders from time to time regarding the deadline, event dates.
 🔹 Check out all upcoming events in a simple, regularly updated table.
 🔹 Happening Now – See ongoing events in real time, and opt in to get a heads-up an hour before they start.
+            </pre>
 
 It’s completely free. Just hit the button below to sign up!</p>
         <button class="big-button "onclick="window.location.href='https://forms.gle/mf1dbMMjwromp5fM8';">Click</button></p>
