--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
             margin-bottom: 20px;
         }
         .subtitle {
-            font-size: 18px;
-            line-height: 1.6;
-            margin-bottom: 20px;
+            font-size: 30px;
+            line-height: 1.8;
+            margin-bottom: 25px;
             color: #555;
             text-align: left;
             max-width: 600px;
@@ -130,27 +130,22 @@
     <p class="title">NMIA - Never Miss It Again!</p>
     <p class="subtitle">
         <pre>
-        Tired of missing out on events, registration deadlines, etc by your favourite clubs just cuz you didn't get the memo?
-        Exhausted from keeping track dates, deadlines, etc by checking instagram stories, posts of multiple ig accounts? 
+        Tired of missing out on events, registration deadlines, etc by your favourite clubs 
+        just cuz you didn't get the memo?
+        Exhausted from keeping track dates, deadlines, etc by checking instagram 
+        stories, posts of multiple club ig pages? 
+        
         Well, not anymore, NMIA’s got you covered.
 
 🔹 Pick the clubs you’re interested in, and get notifications straight to your email inbox.
 🔹 Reminders from time to time regarding the deadline, event dates.
 🔹 Check out all upcoming events in a simple, regularly updated table.
 🔹 Happening Now – See ongoing events in real time, and opt in to get a heads-up an hour before they start.
-            </pre>
+       </pre>
 
 It’s completely free. Just hit the button below to sign up!</p>
         <button class="big-button "onclick="window.location.href='https://forms.gle/mf1dbMMjwromp5fM8';">Click</button></p>
     <pre></pre>
-<!--     <label for="clubFilter">Filter by Club:</label>
-    <select id="clubFilter">
-        <option value="all">All Clubs</option>
-        <option value="Pragyaan">Pragyaan</option>
-        <option value="NITTFEST">NITTFEST</option>
-        <option value="Aaveg">Aaveg</option>
-    </select> -->
-
 
     <table>
         <thead>
