--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
             margin-bottom: 30px;
             color: #555;
             text-align: left;
-            max-width: 600px;
+            max-width: 90vw;
             margin-left: auto;
             margin-right: auto;
+            white-space: pre-wrap;
         }
         .big-button {
             width: 200px;
@@ -129,7 +130,7 @@
 
     <p class="title">NMIA - Never Miss It Again!</p>
     <p class="subtitle">
-        <pre>
+        <pre class="subtitle">
         Tired of missing out on events, registration deadlines, etc by your favourite clubs 
         just cuz you didn't get the memo?
         Exhausted from keeping track dates, deadlines, etc by checking instagram 
