--- a/index.html
+++ b/index.html
@@ -90,12 +90,19 @@
 
     <style>
         .title {
-            font-size: 48px;
+            font-size: 50px;
             font-weight: bold;
             margin-bottom: 20px;
         }
+
+        .subtitle-container {
+            max-width: 90vw; /* Keeps text within screen */
+            margin: 0 auto; /* Centers the container */
+            text-align: left; /* Aligns text to the left */
+        }
+        
         .subtitle {
-            font-size: 35px;
+            font-size: 24px;
             line-height: 2.0;
             margin-bottom: 30px;
             color: #555;
