--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
 
     <p class="title">NMIA - Never Miss It Again!</p>
     <p class="subtitle"><pre class="subtitle">
-Tired of missing out on events by your favourite clubs just cuz you didn't get the memo?
+Tired of missing out on events, reg. deadlines, etc by your favourite clubs just cuz you didn't get the memo?
 
-Exhausted from keeping track reg. deadlines, etc by checking instagram stories, posts of multiple club ig pages? 
+Exhausted from keeping track by checking instagram stories, posts of multiple club ig pages? 
         
 Well, not anymore, NMIA’s got you covered.
 
