--- a/index.html
+++ b/index.html
@@ -118,18 +118,20 @@
             white-space: pre-wrap;
         }
         .big-button {
-            width: 250px;
-            height: 60px;
-            font-size: 22px;
+            width: 300px; /* Wider */
+            height: 70px; /* Taller */
+            font-size: 24px; /* Bigger text */
             font-weight: bold;
             background-color: #007bff;
             color: white;
             border: none;
-            border-radius: 8px;
+            border-radius: 10px; /* More rounded */
             cursor: pointer;
             transition: 0.3s;
-            display: block;
-            margin: 30px auto;
+            margin-top: 25px;
+            padding: 15px;
+            display: block;   /* Ensures it's treated as a block element */
+            margin: 25px auto;
         }
         .big-button:hover {
             background-color: #0056b3;
